src/main/java/com/example/HockeyStandings/error/ApiError.java
package com.example.HockeyStandings.error;

import java.io.Serializable;

public interface ApiError extends Serializable{
}
